# ros2_tarun

./: README.md  robot_readme.md
src/: readme.md
src/bot_control/: package.xml  setup.py
src/bot_control/bot_control/: obstacle_stop.py
src/bot_control/launch/: obstacle_stop.launch.py
src/bot_description/: CMakeLists.txt  package.xml  setup.py
src/bot_description/launch/: gazebo.launch.py  spawn_robot.launch.py  view_model.launch.py  view_rviz.launch.py
src/bot_description/urdf/: robot.xacro
src/bot_description/worlds/: my_world.world
src/number_interface/: setup.py
src/number_interface/number_interface/: number_publisher.py  number_subscriber.py
src/obstacle_stop/: package.xml  setup.cfg  setup.py
src/obstacle_stop/obstacle_stop/: constant_speed_node.py  obstacle_stop_node.py
src/obstacle_stop/obstacle_stop/install/: local_setup.sh  setup.sh
src/py_pubsub/: package.xml
vision_pkg/: package.xml  setup.py
vision_pkg/vision_pkg/: camera_detect.py
week2/: readme.md
week2/src/launchpackage/: package.xml  setup.cfg  setup.py
week2/src/number_interface/: package.xml  setup.cfg  setup.py
week2/src/number_interface/launch/: launcher.py
week2/src/number_interface/number_interface/: number_publisher.py  number_subscriber.py
week2/src/number_square/: package.xml  setup.cfg  setup.py
week2/src/number_square/number_square/: number_publisher.py  number_subscriber.py
week2/src/py_pubsub/: setup.py
